--- a/src/Data.css
+++ b/src/Data.css
@@ -1,64 +1,69 @@
-/* Data.css */
-
 .data-container {
-    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 
   .data-category {
-    background-color: #f5f5f5;
-    padding: 15px;
-    margin: 15px 0;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
   .data-category h2 {
-    color: #333;
-    margin-bottom: 15px;
-    font-size: 1.5em;
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 5px;
+    margin-bottom: 10px;
+  }
+
+  .data-content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .data-list {
+    list-style-type: none;
+    padding: 200;
+    margin-left: 20px; /* Add margin for separation from the graph */
+    flex: 1; /* Occupy remaining space */
   }
 
   .data-entry {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: #fff;
-    padding: 10px 15px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    transition: box-shadow 0.3s ease;
-  }
-
-  .data-entry:hover {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
   }
 
   .entry-info {
-    flex: 1;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-between; /* Ensure columns are spaced evenly */
   }
 
-  .entry-info span {
-    flex: 1;
-    margin: 0 10px;
-    color: #555;
+  .info-column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .info-label {
+    font-weight: bold;
+    margin-bottom: 10px; /* Add space between labels */
+    margin-right:30px; /* Add space between labels */
+    margin-left:10px; /* Add space between labels */
+  }
+
+  .info-value {
+    margin-bottom: 5px; /* Add space between values */
   }
 
   .liquidate-button {
-    background-color: #ff6f61;
+    margin-left: 30px;
+    padding: 5px 10px;
+    background-color: #007bff;
     color: white;
     border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
   }
 
   .liquidate-button:hover {
-    background-color: #e53935;
+    background-color: #0056b3;
   }
